overflow fix

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,7 +21,6 @@ body {
     font-family: $text-font;
     color: $primary-black;
     transition: 0.5s;
-    overflow-x: hidden;
 }
 
 
